# uefi-libc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  more.md  test.sh  uef-clang.cmake.in
cmake/Platform/: UEFI-Clang-C.cmake  UEFI-Clang-CXX.cmake  UEFI-Clang.cmake  UEFI-Clang.cmake.in  UEFI.cmake
cmake/toolchain/: uef-clang.cmake.in
example/: CMakeLists.txt  README.md  hello.efi  main.c  main.cpp  x86_64-uefi-clang.cmake
libc/: CMakeLists.txt
libc++/: CMakeLists.txt
libc++/include/: algorithm  algorithm.hpp  cstddef  new
libc++/src/: _purecall.cpp  new.cpp
libc/include/: FILE.h  arch.h  assert.h  ctype.h  enter.h  errno.h  locale.h  math.h  restrict.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  uefi.h  unistd.h  wchar.h
libc/src/: TODO.h  enter.cpp  errno.cpp  locale.cpp  nanoprintf.h  stdio.cpp  stdlib.cpp  string.cpp  time.cpp  uefi.cpp  unistd.cpp  utils.cpp  wchar.cpp
libc/src/stdio/: FILE_File.cpp  FILE_File.h  FILE_In.cpp  FILE_In.h  FILE_Out.cpp  FILE_Out.h  FILE_stream.h  stdio.cpp
libc/src/utils/: STUB.h  utils.cpp  utils.h
libm/: Cargo.toml
libm/src/: lib.rs
test/: README.md
